syntax = "proto3";

// Based on:
// https://gitlab.com/commonground/nlx/nlx/-/blob/master/directory-api/api/directoryapi.proto

package directoryapi;

import "google/protobuf/empty.proto";

service Directory {
  rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse) {};
  rpc RegisterInway(RegisterInwayRequest) returns (RegisterInwayResponse);
  rpc RegisterOutway(RegisterOutwayRequest) returns (RegisterOutwayResponse);
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse) {}
}

message Organization {
  string serial_number = 1;
  string name = 2;
}

message Inway {
  enum State {
    STATE_UNSPECIFIED = 0;
    STATE_UP = 1;
    STATE_DOWN = 2;
  }
  string address = 1;
  State state = 2;
}

message GetVersionResponse { string version = 1; }

message RegisterInwayRequest {
  message RegisterService {
    string name = 1;
    string documentation_url = 2;
    // Deprecated. Type is deduced from api_specification_document_url
    string api_specification_type = 3;
    string api_specification_document_url = 4;
    bool internal = 7;
    string public_support_contact = 8;
    string tech_support_contact = 9;
    int32 one_time_costs = 10;
    int32 monthly_costs = 11;
    int32 request_costs = 12;
  }

  string inway_address = 1;
  repeated RegisterService services = 2;
  string inway_name = 3;
  bool is_organization_inway = 4;
  string management_api_proxy_address = 5;
}

message RegisterInwayResponse { string error = 1; }

message RegisterOutwayRequest { string name = 1; }

message RegisterOutwayResponse { string error = 1; }

message ListServicesRequest {}

message ListServicesResponse {
  message Costs {
    int32 one_time = 1;
    int32 monthly = 2;
    int32 request = 3;
  }

  message Service {
    string name = 1;
    string documentation_url = 2;
    string api_specification_type = 3;
    bool internal = 4;
    string public_support_contact = 5;
    repeated Inway inways = 6;
    Costs costs = 7;
    Organization organization = 8;
  }

  repeated Service services = 1;
}
